eina: update to 1.0.0.beta
git-svn-id: https://svn.macports.org/repository/macports/trunk@72710 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/eina/Portfile
+++ b/dports/devel/eina/Portfile
@@ -4,23 +4,22 @@
 PortSystem              1.0
 
 name                    eina
-version                 0.9.9.49898
-set snapshot            2010-06-27
+version                 1.0.0.beta
 categories              devel
 platforms               darwin
 maintainers             ryandesign openmaintainer
 license                 LGPLv2.1
-homepage                http://trac.enlightenment.org/e/wiki/Eina
-master_sites            http://download.enlightenment.org/snapshots/${snapshot}/
-use_bzip2               yes
 
 description             multi-platform data type library
 
 long_description        ${name} is a multi-platform library that provides optimized data types and tools
 
-checksums               md5     d14bacce7d588524c12ddad1db9c7240 \
-                        sha1    5476e1b74465a45c10175d4d3ddf7907452f09ff \
-                        rmd160  f38164e2fc8d309016bc0e7f2e714c31409b67d1
+homepage                http://trac.enlightenment.org/e/wiki/Eina
+master_sites            http://download.enlightenment.org/releases/
+use_bzip2               yes
+
+checksums               sha1    a02474ae627f3a20cae5439f39c631c0447ae7d5 \
+                        rmd160  0e42052954c4e494a6e6ec875054e4b126ae0284
 
 depends_lib             port:libiconv
 
@@ -29,6 +28,5 @@ configure.args          --disable-doc
 use_parallel_build      yes
 
 livecheck.type          regex
-livecheck.url           http://download.enlightenment.org/snapshots/
-livecheck.version       ${snapshot}
-livecheck.regex         (\\d{4}-\\d{2}-\\d{2})/
+livecheck.url           [lindex ${master_sites} 0]
+livecheck.regex         ${name}-(\[0-9a-z.\]+)${extract.suffix}
