eet: update to 1.4.0.beta
git-svn-id: https://svn.macports.org/repository/macports/trunk@72711 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/eet/Portfile
+++ b/dports/devel/eet/Portfile
@@ -4,13 +4,10 @@
 PortSystem              1.0
 
 name                    eet
-version                 1.3.2
-revision        1
+version                 1.4.0.beta
 maintainers             ryandesign openmaintainer
 categories              devel x11
 platforms               darwin
-homepage                http://www.enlightenment.org
-master_sites            http://download.enlightenment.org/releases/
 
 description             EET is a library for writing sets of data.
 
@@ -23,11 +20,12 @@ long_description        EET is a tiny library designed to write an \
                         than is needed, and it was much simpler to \
                         impliment this once here.
 
-checksums               md5     8e3ad419baaab4a9046f64d357583705 \
-                        sha1    78d9dad79540f7071f1f8941ecce4c41ccaca03f \
-                        rmd160  fae3ec9dc139b3b15647bc9d3475e174fee3c88d
-
+homepage                http://trac.enlightenment.org/e/wiki/Eet
+master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
+
+checksums               sha1    5ae660785a27e8a0419e51a94bde37db15e52605 \
+                        rmd160  6b30c26cff05e787747a07e2ba11bc1c1da2b2e6
 
 depends_lib             port:jpeg port:zlib port:eina port:openssl
 
@@ -38,4 +36,4 @@ use_parallel_build      yes
 
 livecheck.type          regex
 livecheck.url           [lindex ${master_sites} 0]
-livecheck.regex         ${name}-(\[0-9.\]+)\\.tar
+livecheck.regex         ${name}-(\[0-9a-z.\]+)${extract.suffix}
