evas: update to 1.0.0.beta and remove svg variant (since svg has always been on)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72712 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/evas/Portfile
+++ b/dports/devel/evas/Portfile
@@ -4,13 +4,10 @@
 PortSystem              1.0
 
 name                    evas
-version                 0.9.9.49898
-set snapshot            2010-06-27
+version                 1.0.0.beta
 categories              devel x11
 platforms               darwin
 maintainers             ryandesign openmaintainer
-homepage                http://www.enlightenment.org
-master_sites            http://download.enlightenment.org/snapshots/${snapshot}/
 
 description             Evas is a hardware-accelerated canvas API for X11.
 
@@ -21,10 +18,11 @@ long_description        Evas is a hardware-accelerated canvas API for \
                         pixmaps, lines and rectangles for speed if your CPU \
                         or graphics hardware are too slow.
 
-checksums               md5     8c547492557fb90ec57441b109683451 \
-                        sha1    e84596a9906bee3d1f87683a8a183caa504430bb \
-                        rmd160  1adc8145dbe6ba86477a069c05d6ef6032fa061f
+checksums               sha1    0bdef4fdeb3a0a787771f8ac044e2354a1937214 \
+                        rmd160  ff2a8e96cc39dfea399cf040cc660b9bd01e1ae5
 
+homepage                http://trac.enlightenment.org/e/wiki/Evas
+master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
 depends_lib             port:eet \
@@ -40,14 +38,8 @@ configure.args          --disable-doc \
 # http://trac.enlightenment.org/e/ticket/503
 #                        --enable-gl-x11
 
-variant svg description "Add SVG support" {
-    depends_lib-append  port:librsvg
-    configure.args-append --enable-image-loader-svg
-}
-
 use_parallel_build      yes
 
 livecheck.type          regex
-livecheck.url           http://download.enlightenment.org/snapshots/
-livecheck.version       ${snapshot}
-livecheck.regex         (\\d{4}-\\d{2}-\\d{2})/
+livecheck.url           [lindex ${master_sites} 0]
+livecheck.regex         ${name}-(\[0-9a-z.\]+)${extract.suffix}
