ecore: update to 1.0.0.beta
git-svn-id: https://svn.macports.org/repository/macports/trunk@72713 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/ecore/Portfile
+++ b/dports/devel/ecore/Portfile
@@ -4,8 +4,7 @@
 PortSystem              1.0
 
 name                    ecore
-version                 0.9.9.49898
-set snapshot            2010-06-27
+version                 1.0.0.beta
 description             Ecore is a core event abstraction layer.
 long_description        It is the core event abstraction layer and \
                         X abstraction layer that makes doing selections, \
@@ -18,19 +17,20 @@ maintainers             ryandesign openmaintainer
 categories              devel x11
 platforms               darwin
 
-homepage                http://www.enlightenment.org
-master_sites            http://download.enlightenment.org/snapshots/${snapshot}/
-
+homepage                http://trac.enlightenment.org/e/wiki/Ecore
+master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               md5     52245ac4e4c83e579692eff6380e56b1 \
-                        sha1    2c3447147c5b53ea9cd8402ac84b9dd0dd8f1f85 \
-                        rmd160  8ad74c9066d1b766dc1afe8c4c13421362bcb6f8
+checksums               sha1    57d9ed899f0581504d64583708de58da076d7d64 \
+                        rmd160  f151e965621fdadb4c1ef1ad4f8747773e3dd72a
 
 depends_lib             port:evas \
                         port:curl
 
+patchfiles              patch-src-lib-ecore_evas-ecore_evas_x.c.diff
+
+use_parallel_build      yes
+
 livecheck.type          regex
-livecheck.url           http://download.enlightenment.org/snapshots/
-livecheck.version       ${snapshot}
-livecheck.regex         (\\d{4}-\\d{2}-\\d{2})/
+livecheck.url           [lindex ${master_sites} 0]
+livecheck.regex         ${name}-(\[0-9a-z.\]+)${extract.suffix}
