embryo: update to 1.0.0.beta
git-svn-id: https://svn.macports.org/repository/macports/trunk@72714 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/embryo/Portfile
+++ b/dports/devel/embryo/Portfile
@@ -4,8 +4,7 @@
 PortSystem              1.0
 
 name                    embryo
-version                 0.9.9.49898
-set snapshot            2010-06-27
+version                 1.0.0.beta
 maintainers             ryandesign openmaintainer
 categories              devel lang
 platforms               darwin
@@ -21,15 +20,14 @@ long_description        Embryo implements a C like scripting language \
                         support basic programming structures such as in Edje EDCs.
 
 homepage                http://trac.enlightenment.org/e/wiki/Embryo
-master_sites            http://download.enlightenment.org/snapshots/${snapshot}/
-
+master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               md5     4b46ede6d03f6b53d4cfeb852513a374 \
-                        sha1    e28e842f3a2c918e487d6607d6cf2bc2dac009f1 \
-                        rmd160  e4b194de604d02dad62a237f91d79bbff7c9a3d3
+checksums               sha1    3cf9edb4716cf96d92abdb78deb2f62a3a91032d \
+                        rmd160  c7743745848e3fa14450e7a3163c389f26e7fe62
+
+use_parallel_build      yes
 
 livecheck.type          regex
-livecheck.url           http://download.enlightenment.org/snapshots/
-livecheck.version       ${snapshot}
-livecheck.regex         (\\d{4}-\\d{2}-\\d{2})/
+livecheck.url           [lindex ${master_sites} 0]
+livecheck.regex         ${name}-(\[0-9a-z.\]+)${extract.suffix}
