edje: update to 1.0.0.beta and re-enable universal variant (since lua can now build universal)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72715 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/edje/Portfile
+++ b/dports/graphics/edje/Portfile
@@ -4,13 +4,10 @@ PortSystem              1.0
 
 name                    edje
 epoch                   1
-version                 0.9.9.49539
-set snapshot            2010-06-07
+version                 1.0.0.beta
 maintainers             nomaintainer
 categories              graphics x11
 platforms               darwin
-homepage                http://www.enlightenment.org
-master_sites            http://download.enlightenment.org/snapshots/${snapshot}/
 
 description             A library for graphical layout and animation.
 
@@ -18,20 +15,19 @@ long_description        A graphical layout and animation library \
                         for animated resizable, compressed and scalable \
                         themes.
 
+homepage                http://trac.enlightenment.org/e/wiki/Edje
+master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               md5     03e8172a81d55355a86d5ef089219eb6 \
-                        sha1    682d0c63e698415043bd1a7783aaa2d99e2ca59e \
-                        rmd160  9ed6a3c6556eba05ff015b1fb815a267cbb6f69d
+checksums               sha1    f11537c5284a7550e1ac309a164d6ecb1e8cd069 \
+                        rmd160  810483c24aec6efe0dbdc7b4533d6f67f20a083e
 
 depends_lib             port:ecore \
                         port:embryo \
                         port:lua
 
-# lua is not universal
-universal_variant       no
+use_parallel_build      yes
 
 livecheck.type          regex
-livecheck.url           http://download.enlightenment.org/snapshots/
-livecheck.version       ${snapshot}
-livecheck.regex         (\\d{4}-\\d{2}-\\d{2})/
+livecheck.url           [lindex ${master_sites} 0]
+livecheck.regex         ${name}-(\[0-9a-z.\]+)${extract.suffix}
