e_dbus: update to 1.0.0.beta
git-svn-id: https://svn.macports.org/repository/macports/trunk@72716 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/e_dbus/Portfile
+++ b/dports/devel/e_dbus/Portfile
@@ -4,29 +4,28 @@
 PortSystem              1.0
 
 name                    e_dbus
-version                 0.5.0.49898
-set snapshot            2010-06-27
+version                 1.0.0.beta
 maintainers             ryandesign openmaintainer
 categories              devel
 platforms               darwin
-homepage                http://www.enlightenment.org/
-master_sites            http://download.enlightenment.org/snapshots/${snapshot}/
 
 description             convenience wrappers around dbus to ease integrating \
                         dbus with EFL-based applications
 
 long_description        ${name} is a set of ${description}.
 
+homepage                http://trac.enlightenment.org/e/wiki/E_Dbus
+master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               md5     b94d01cc67028d9b6709dc37b222c436 \
-                        sha1    93958cff0c236ae236d23da3926a353773e22100 \
-                        rmd160  3e10c27e164d97ff8ecbbfa0e1a2c938beefc820
+checksums               sha1    eb243a6e496b119a9844ba98c122aeda85fa1230 \
+                        rmd160  ab327aa3358f1fd7cb3c9ac54def77c5dfdf27ab
 
 depends_lib             port:ecore \
                         port:dbus
 
+use_parallel_build      yes
+
 livecheck.type          regex
-livecheck.url           http://download.enlightenment.org/snapshots/
-livecheck.version       ${snapshot}
-livecheck.regex         (\\d{4}-\\d{2}-\\d{2})/
+livecheck.url           [lindex ${master_sites} 0]
+livecheck.regex         ${name}-(\[0-9a-z.\]+)${extract.suffix}
