efreet: update to 1.0.0.beta
git-svn-id: https://svn.macports.org/repository/macports/trunk@72717 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/efreet/Portfile
+++ b/dports/x11/efreet/Portfile
@@ -4,13 +4,10 @@
 PortSystem              1.0
 
 name                    efreet
-version                 0.5.0.49898
-set snapshot            2010-06-27
+version                 1.0.0.beta
 maintainers             ryandesign openmaintainer
 categories              x11
 platforms               darwin
-homepage                http://www.enlightenment.org/
-master_sites            http://download.enlightenment.org/snapshots/${snapshot}/
 
 description             an implementation of several specifications from \
                         freedesktop.org intended for use in Enlightenment DR17
@@ -19,15 +16,17 @@ long_description        ${name} is ${description}. \
                         The following specifications are included: \
                         base directory\; desktop entry\; icon theme\; menu
 
+homepage                http://trac.enlightenment.org/e/wiki/Efreet
+master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               md5     28a45a199332ff1183c9d8b352286b1e \
-                        sha1    6410778993464149fb3855ee2670357162194fc7 \
-                        rmd160  d3fa9a07b664e65ab45d7252e99d56000f4fc554
+checksums               sha1    4b2b0cba1638bb70fe246b0e9701dce54becb810 \
+                        rmd160  a2589aff4bdb9fefcb93c7bbea819595e001e9a5
 
 depends_lib             port:ecore
 
+use_parallel_build      yes
+
 livecheck.type          regex
-livecheck.url           http://download.enlightenment.org/snapshots/
-livecheck.version       ${snapshot}
-livecheck.regex         (\\d{4}-\\d{2}-\\d{2})/
+livecheck.url           [lindex ${master_sites} 0]
+livecheck.regex         ${name}-(\[0-9a-z.\]+)${extract.suffix}
