gnome-python-desktop: add missing dependency on py26-gnome, closes #22221.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72718 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-python-desktop/Portfile
+++ b/dports/gnome/gnome-python-desktop/Portfile
@@ -20,7 +20,7 @@ checksums       md5     b90f6e96a6321e7bf859f6faff2aa4df \
 
 use_bzip2       yes
 
-depends_lib	port:py26-gtk \
+depends_lib	port:py26-gnome \
                 port:gtksourceview \
                 port:libgtop \
                 port:gnome-media \
