Fix removed install_name_tool correction of qsci main library.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72719 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qscintilla/Portfile
+++ b/dports/devel/qscintilla/Portfile
@@ -60,13 +60,18 @@ build.cmd           "cd ${worksrcpath}/Qt4; make; cd ${worksrcpath}/designer-Qt4
 
 destroot.cmd        "cd ${worksrcpath}/Qt4; make install; cd ${worksrcpath}/designer-Qt4; make install; echo"
 
-post-destroot {
-    # Fix import and plugin library ID (self name)
-    foreach fixfile [exec find ${destroot}${prefix}/share/${qt_name} \
-                         -name "*.dylib" -type f | \
-                          sed -e "s@${destroot}@@g" ] {
-        system "install_name_tool -id ${fixfile} ${destroot}${fixfile}"
-    }
+post-build {
+    # Fix import and plugin library names
+    system "install_name_tool -id \
+                ${qt_dir}/lib/libqscintilla2.5.dylib \
+                ${worksrcpath}/Qt4/libqscintilla2.5.dylib" 
+    system "install_name_tool -id \
+                ${qt_plugins_dir}/designer/libqscintillaplugin.dylib \
+                ${worksrcpath}/designer-Qt4/libqscintillaplugin.dylib" 
+    system "install_name_tool -change \
+                libqscintilla2.5.dylib \
+                ${qt_dir}/lib/libqscintilla2.5.dylib \
+                ${worksrcpath}/designer-Qt4/libqscintillaplugin.dylib"
 }
 
 livecheck.type      regex
