Make sure the Qsci Qt designer plugin uses the just-created Qsci library and its headers, by moving their -L and -I paths to the front of the compile directive.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72721 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qscintilla/Portfile
+++ b/dports/devel/qscintilla/Portfile
@@ -55,7 +55,17 @@ configure.cmd       "cd ${worksrcpath}/Qt4; ${qt_qmake_cmd} qscintilla.pro; \
                      cd ${worksrcpath}/designer-Qt4; ${qt_qmake_cmd} designer.pro; \
                      echo"
 
-build.env-append    CPLUS_INCLUDE_PATH=${worksrcpath}/Qt4 LIBRARY_PATH=${worksrcpath}/Qt4
+post-configure {
+    # make sure the designer plugin finds the correct Qsci library, by
+    # putting its search path first of all -L paths
+    reinplace "/LIBS/s@\-L/opt/local/lib@\-L../Qt4@1" \
+        ${worksrcpath}/designer-Qt4/Makefile
+    # make sure the designer plugin finds the correct Qsci includes, by
+    # putting its search path first of all -I paths
+    reinplace "/INCPATH/s@\-I@\-I../Qt4 \-I@1" \
+        ${worksrcpath}/designer-Qt4/Makefile
+}
+
 build.cmd           "cd ${worksrcpath}/Qt4; make; cd ${worksrcpath}/designer-Qt4; make; echo"
 
 destroot.cmd        "cd ${worksrcpath}/Qt4; make install; cd ${worksrcpath}/designer-Qt4; make install; echo"
