xorg-server: Bump to 1.9.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72724 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-server/Portfile
+++ b/dports/x11/xorg-server/Portfile
@@ -5,8 +5,7 @@ PortSystem 1.0
 name		xorg-server
 conflicts       xorg-server-devel
 set my_name	xorg-server
-version		1.8.2
-revision        2
+version		1.9.1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	The X.org / Xquartz X server.
@@ -20,9 +19,9 @@ master_sites    http://xorg.freedesktop.org/archive/individual/xserver/
 dist_subdir     ${my_name}
 distname        ${my_name}-${version}
 
-checksums           md5     c4156e3e71123a54413e629f4806fc71 \
-                    sha1    825d11757b729444800e0a3afd4e98d19d286b1a \
-                    rmd160  dee713fe677fdcccc0fec29a02b0af4ef48819f2
+checksums           md5     64f2a021667ac3a2bc007f2567170f03 \
+                    sha1    48384349fb598ece532452ae42bff3a176504e16 \
+                    rmd160  cef01a6c9033d6f0adb740d04618e5642c597f71
 
 use_bzip2	yes
 use_parallel_build yes
@@ -48,13 +47,7 @@ depends_build \
 	port:xorg-xextproto \
 	port:xorg-xineramaproto \
 	port:xorg-xtrans \
-	port:autoconf \
-	port:automake \
-	port:libtool \
-	port:xorg-util-macros \
-	port:doxygen
-
-depends_skip_archcheck doxygen
+	port:xorg-util-macros
 
 # This xinit dependency needs to be port: not bin: because we specifically run ${prefix}/bin/startx from bundle-main.c
 depends_run \
@@ -73,6 +66,10 @@ depends_lib \
 configure.args --with-apple-applications-dir=${applications_dir} \
 	--with-launchd-id-prefix=org.macports \
 	--without-dtrace \
+	--without-doxygen \
+	--without-fop \
+	--without-xmlto \
+	--disable-devel-docs \
 	--with-sha1=CommonCrypto
 
 # GL/internal/dri_interface.h is missing in prefix (provided by libdrm for the xorg DDX... not helpful for us)
@@ -82,19 +79,13 @@ configure.env-append \
 	RAWCPP=${configure.cpp}
 
 patchfiles \
-        0001-OS-support-fix-writeable-client-vs-IgnoreClient-beha.patch \
-        0002-dixstruct-make-ignoreCount-change-more-ABI-friendly.patch \
-        0003-XQuartz-Avoid-a-crash-when-mistakenly-free-ing-in-Qu.patch \
-        0004-rootless-Adjust-the-frame-size-of-the-native-root-wi.patch \
-        0005-XQuartz-Bump-bundle-version-to-2.5.2.patch \
-        0006-XQuartz-GL-Fix-__glXAquaScreenCreateDrawable-prototy.patch \
-        0007-XQuartz-GLX-Don-t-mangle-__GLXDrawable-s-pDraw.patch \
-        0008-XQuartz-xpbproxy-Don-t-take-down-the-whole-server-on.patch \
-        0009-XQuartz-Bump-bundle-version-to-2.5.3.patch \
-        0010-Workaround-the-GC-clipping-problem-in-miPaintWindow-.patch \
+        0010-Workaround-the-GC-clipping-problem-in-miPaintWindow.patch \
         0011-fb-Revert-fb-changes-that-broke-XQuartz.patch
 
 patch.pre_args -p1
+
+#use_autoreconf yes
+#autoreconf.args -fvi
 
 build.args V=1
 
@@ -107,4 +98,34 @@ platform macosx {
 		# Xplugin.h is missing on Tiger
 		configure.cppflags-append -I${filespath}/include
 	}
+}
+
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:doxygen \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		doxygen \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-doxygen \
+		--without-fop \
+		--without-xmlto \
+		--disable-devel-docs 
+
+	configure.args-append \
+		--with-doxygen \
+		--with-fop \
+		--with-xmlto \
+		--enable-devel-docs
+
+	configure.env-append \
+		DOXYGEN="${prefix}/bin/doxygen" \
+		FOP="${prefix}/bin/fop" \
+		XMLTO="${prefix}/bin/xmlto"
 }
