removed hardcoded prefix in patchfiles, added previosly deleted dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@72725 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/pg2xbase/Portfile
+++ b/dports/databases/pg2xbase/Portfile
@@ -16,6 +16,9 @@ depends_lib		port:postgresql81 port:xbase
 
 master_sites		${homepage}
 
+depends_lib		port:postgresql81 \
+                port:xbase
+
 checksums		sha1 695625b19bea40748916c9e4c4185e82bdb808cc
 
 extract.suffix  .tgz
