--- a/dports/devel/qscintilla/Portfile
+++ b/dports/devel/qscintilla/Portfile
@@ -58,7 +58,7 @@ configure.cmd       "cd ${worksrcpath}/Qt4; ${qt_qmake_cmd} qscintilla.pro; \
 post-configure {
     # make sure the designer plugin finds the correct Qsci library, by
     # putting its search path first of all -L paths
-    reinplace "/LIBS/s@\-L/opt/local/lib@\-L../Qt4@1" \
+    reinplace "/LIBS/s@\-L${prefix}/lib@\-L../Qt4@1" \
         ${worksrcpath}/designer-Qt4/Makefile
     # make sure the designer plugin finds the correct Qsci includes, by
     # putting its search path first of all -I paths
