--- a/dports/print/ghostscript-fonts-hiragino/Portfile
+++ b/dports/print/ghostscript-fonts-hiragino/Portfile
@@ -4,6 +4,7 @@ PortSystem      1.0
 
 name            ghostscript-fonts-hiragino
 version         9.00
+revision        1
 categories      print japanese chinese
 maintainers     takanori openmaintainer
 description     Hiragino font for ghostscript ${version}
@@ -23,19 +24,19 @@ build {}
 
 destroot {
     if {${os.platform} == "darwin" && ${os.major} == 8} {
-        set FontList {"/System/Library/Fonts/ヒラギノ角ゴ Pro W3.otf"  HiraKakuPro-W3     Adobe-Japan1 {GothicBBB-Medium}
-                      "/System/Library/Fonts/ヒラギノ角ゴ Pro W6.otf"  HiraKakuPro-W6     Adobe-Japan1 {FutoGoB101-Bold}
+        set FontList {"/System/Library/Fonts/ヒラギノ角ゴ Pro W3.otf"  HiraKakuPro-W3     Adobe-Japan1 {GothicBBB-Medium A-OTF-GothicBBBPro-Medium}
+                      "/System/Library/Fonts/ヒラギノ角ゴ Pro W6.otf"  HiraKakuPro-W6     Adobe-Japan1 {FutoGoB101-Bold  A-OTF-FutoGoB101Pro-Bold}
                       "/System/Library/Fonts/ヒラギノ角ゴ Std W8.otf"  HiraKakuStd-W8     Adobe-Japan1 {}
-                      "/System/Library/Fonts/ヒラギノ丸ゴ Pro W4.otf"  HiraMaruPro-W4     Adobe-Japan1 {Jun101-Light}
-                      "/System/Library/Fonts/ヒラギノ明朝 Pro W3.otf"  HiraMinPro-W3      Adobe-Japan1 {Ryumin-Light}
-                      "/System/Library/Fonts/ヒラギノ明朝 Pro W6.otf"  HiraMinPro-W6      Adobe-Japan1 {FutoMinA101-Bold}}
+                      "/System/Library/Fonts/ヒラギノ丸ゴ Pro W4.otf"  HiraMaruPro-W4     Adobe-Japan1 {Jun101-Light     A-OTF-Jun101Pro-Light}
+                      "/System/Library/Fonts/ヒラギノ明朝 Pro W3.otf"  HiraMinPro-W3      Adobe-Japan1 {Ryumin-Light     A-OTF-RyuminPro-Light}
+                      "/System/Library/Fonts/ヒラギノ明朝 Pro W6.otf"  HiraMinPro-W6      Adobe-Japan1 {FutoMinA101-Bold A-OTF-FutoMinA101Pro-Bold}}
     } else {
-        set FontList {"/Library/Fonts/ヒラギノ角ゴ Pro W3.otf"         HiraKakuPro-W3     Adobe-Japan1 {GothicBBB-Medium}
-                      "/Library/Fonts/ヒラギノ角ゴ Pro W6.otf"         HiraKakuPro-W6     Adobe-Japan1 {FutoGoB101-Bold}
+        set FontList {"/Library/Fonts/ヒラギノ角ゴ Pro W3.otf"         HiraKakuPro-W3     Adobe-Japan1 {GothicBBB-Medium A-OTF-GothicBBBPro-Medium}
+                      "/Library/Fonts/ヒラギノ角ゴ Pro W6.otf"         HiraKakuPro-W6     Adobe-Japan1 {FutoGoB101-Bold  A-OTF-FutoGoB101Pro-Bold}
                       "/Library/Fonts/ヒラギノ角ゴ Std W8.otf"         HiraKakuStd-W8     Adobe-Japan1 {}
-                      "/Library/Fonts/ヒラギノ丸ゴ Pro W4.otf"         HiraMaruPro-W4     Adobe-Japan1 {Jun101-Light}
-                      "/Library/Fonts/ヒラギノ明朝 Pro W3.otf"         HiraMinPro-W3      Adobe-Japan1 {Ryumin-Light}
-                      "/Library/Fonts/ヒラギノ明朝 Pro W6.otf"         HiraMinPro-W6      Adobe-Japan1 {FutoMinA101-Bold}
+                      "/Library/Fonts/ヒラギノ丸ゴ Pro W4.otf"         HiraMaruPro-W4     Adobe-Japan1 {Jun101-Light     A-OTF-Jun101Pro-Light}
+                      "/Library/Fonts/ヒラギノ明朝 Pro W3.otf"         HiraMinPro-W3      Adobe-Japan1 {Ryumin-Light     A-OTF-RyuminPro-Light}
+                      "/Library/Fonts/ヒラギノ明朝 Pro W6.otf"         HiraMinPro-W6      Adobe-Japan1 {FutoMinA101-Bold A-OTF-FutoMinA101Pro-Bold}
                       "/System/Library/Fonts/ヒラギノ角ゴ ProN W3.otf" HiraKakuProN-W3    Adobe-Japan1 {}
                       "/System/Library/Fonts/ヒラギノ角ゴ ProN W6.otf" HiraKakuProN-W6    Adobe-Japan1 {}
                       "/Library/Fonts/ヒラギノ角ゴ StdN W8.otf"        HiraKakuStdN-W8    Adobe-Japan1 {}
