avr-libc: apply patch from maintainer to indicate deliberate mtree violation (#26682)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72734 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/cross/avr-libc/Portfile
+++ b/dports/cross/avr-libc/Portfile
@@ -14,6 +14,8 @@ long_description    AVR Libc is a Free Software project whose goal is \
 platforms           darwin
 homepage            http://www.nongnu.org/avr-libc/
 master_sites        http://savannah.nongnu.org/download/avr-libc/
+# installs deliberately files outside regular tree:
+destroot.violate_mtree  yes                                                                                                                           
 
 use_bzip2           yes
 checksums           md5 3eff7b779bd950400cb0a45f3c2fb377 \
