--- a/dports/devel/dbusmenu-qt/Portfile
+++ b/dports/devel/dbusmenu-qt/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4 1.0
+PortGroup           kde4 1.1
 
 name                dbusmenu-qt
 version             0.6.2
+revision            1
 categories          devel kde4 kde
 maintainers         snc openmaintainer
 description         expose menus on DBus
