--- a/dports/kde/attica/Portfile
+++ b/dports/kde/attica/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                attica
 version             0.2.0
+revision            1
 categories          kde kde4
 maintainers         snc sharky
 description         Qt library for Open Collaboration Services API 1.4
