Use KDE4-1.1 PortGroup
git-svn-id: https://svn.macports.org/repository/macports/trunk@72737 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/shared-desktop-ontologies/Portfile
+++ b/dports/kde/shared-desktop-ontologies/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4 1.0
+PortGroup           kde4 1.1
 
 name                shared-desktop-ontologies
 version             0.5
+revision            1
 categories          kde kde4 devel
 maintainers         snc sharky openmaintainer
 description         Open Semantic Collaboration Architecture Foundation (OSCAF)\
