evolution-data-server: build fixes, closes #26957, maintainer timeout.     * drop GDK_DISABLE_DEPRECATED from cflags to allow building against gtk2 2.22     * disable kerberos5 support on Tiger which breaks build there
git-svn-id: https://svn.macports.org/repository/macports/trunk@72740 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/evolution-data-server/Portfile
+++ b/dports/gnome/evolution-data-server/Portfile
@@ -63,6 +63,8 @@ platform darwin 8 {
         reinplace "s|#include <stdio.h>|#include <stdio.h>\\\n#include <sys/types.h>|g" \
         ${worksrcpath}/camel/camel-block-file.h
     }
+    configure.args-delete --with-krb5=/usr
+    configure.args-append --without-krb5
 }
 
 variant gtk_doc description {Build gtk-doc documentation} {
