devel/qscintilla; patch for universal building; #26992
git-svn-id: https://svn.macports.org/repository/macports/trunk@72741 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qscintilla/Portfile
+++ b/dports/devel/qscintilla/Portfile
@@ -39,9 +39,15 @@ checksums           md5     8063f8f933513959432c27c5ffecf56b \
                     sha1    2401c2214ba0377ad61855c0fac6f6c7c95801d6 \
                     rmd160  d96cf05c879f314ee828ec6a1609bd1864692bd6
 
-universal_variant   no
+universal_variant   yes
 
 post-patch {
+    
+    # allow for universal building, if desired
+    if { [variant_isset universal] } {
+        reinplace "s@CONFIG += qt @CONFIG += qt ${universal_archs} @" ${worksrcpath}/Qt4/qscintilla.pro
+    }
+    
     # fix up 'Platform.h's, to avoid a conflict with the port 'tidy's
     # 'platform.h'.
     reinplace "/INCLUDEPATH/s@ \\. @ . .. @" \
@@ -49,6 +55,7 @@ post-patch {
     foreach fixfile [exec grep -lr \"Platform\.h\" ${worksrcpath}] {
         reinplace "s@\"Platform\.h\"@\"include/Platform\.h\"@g" ${fixfile}
     }
+    
 }
 
 configure.cmd       "cd ${worksrcpath}/Qt4; ${qt_qmake_cmd} qscintilla.pro; \
