adding missing dependencies as per #26995
git-svn-id: https://svn.macports.org/repository/macports/trunk@72742 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/mdbtools/Portfile
+++ b/dports/databases/mdbtools/Portfile
@@ -13,6 +13,10 @@ maintainers             and.damore openmaintainer
 categories              databases devel
 platforms               darwin 
 homepage                http://mdbtools.sourceforge.net
+depends_lib             port:glib2 \
+                        port:flex \
+                        port:bison
+
 master_sites            sourceforge:mdbtools
 checksums               md5     246e8f38b2a1af1bcff60ee0da59300b \
                         sha1    37a50d623a444ec690d2677b12b59c2f11e497c0 \
