--- a/dports/graphics/vtk5/Portfile
+++ b/dports/graphics/vtk5/Portfile
@@ -5,10 +5,10 @@ PortSystem 1.0
 PortGroup   cmake 1.0
 
 name        vtk5
-version     5.6.0
+version     5.6.1
 set branch  [join [lrange [split ${version} .] 0 1] .]
 categories  graphics devel
-maintainers nomaintainer
+maintainers adfernandes openmaintainer
 description 3D visualization toolkit
 long_description    an open source, freely available software system  \
     for 3D computer graphics, image processing, and visualization     \
@@ -22,9 +22,9 @@ master_sites    http://www.vtk.org/files/release/${branch}/
 
 distfiles           [suffix vtk-${version}]
 checksums           [suffix vtk-${version}] \
-                    md5     a56232baae6071f9f59f138d8f4620c2 \
-                    sha1    355209c485304f1b0feefcda3585d45217ffd230 \
-                    rmd160  b7abf3b9bb14a3db81608c7aa2721935ae653295
+                    md5     b80a76435207c5d0f74dfcab15b75181 \
+                    sha1    6d4d0de3b468828f21f70c5af5e37f9412ee59c5 \
+                    rmd160  ac1864c9604d843ab9c654c67109f4f1487acaee
 
 depends_build-append    port:readline
 distname    VTK
@@ -32,6 +32,7 @@ distname    VTK
 use_parallel_build yes
 
 post-extract {
+    # See http://public.kitware.com/Bug/view.php?id=7813
     delete ${worksrcpath}/Utilities/vtktiff/tif_fax3sm.c
 }
 
@@ -70,6 +71,7 @@ build.env-append DYLD_LIBRARY_PATH=${worksrcpath}/bin
 if {![variant_isset carbon] && ![variant_isset qt4_mac]} {
     default_variants +x11 +tcltk
 }
+
 if {![variant_isset python25]} {
     default_variants +python26
 }
@@ -102,7 +104,7 @@ variant tcltk conflicts carbon description {Build with Tcl wrappers and Tk suppo
         -DTCL_LIBRARY=${prefix}/lib/libtcl.dylib
 }
 
-variant carbon conflicts x11 tcltk description {Use Carbon.  Allows embedding VTK within qt4-mac (and py25-pyqt4 when used with Python)} {
+variant carbon conflicts x11 tcltk description {Use Carbon.  Allows embedding VTK within qt4-mac (and py*-pyqt4 when used with Python)} {
     configure.args-delete \
         -DVTK_USE_COCOA:BOOL=ON \
         -DVTK_USE_CARBON:BOOL=OFF
@@ -112,7 +114,8 @@ variant carbon conflicts x11 tcltk description {Use Carbon.  Allows embedding VT
 }
 
 variant python requires python25 description {Compatibility variant, requires +python25} {}
-variant python25 description {Build Python 2.5 wrappers} conflicts python26 {
+
+variant python25 description {Build Python 2.5 wrappers} conflicts python26 python27 {
     depends_build-append    port:python25
     configure.args-delete   \
         -DVTK_WRAP_PYTHON:BOOL=OFF
@@ -123,14 +126,13 @@ variant python25 description {Build Python 2.5 wrappers} conflicts python26 {
         -DPYTHON_LIBRARY:FILEPATH=${prefix}/lib/libpython2.5.dylib \
         -DVTK_WRAP_PYTHON:BOOL=ON \
         -DVTK_INSTALL_NO_PYTHON:BOOL=ON
-
     post-destroot {
         file mkdir ${destroot}${prefix}/lib/python2.5/site-packages
         system "cd ${worksrcpath}/Wrapping/Python && ${prefix}/bin/python2.5 setup.py install --prefix=${prefix} --root=${destroot}"
     }
 }
 
-variant python26 description {Build Python 2.6 wrappers} conflicts python25 {
+variant python26 description {Build Python 2.6 wrappers} conflicts python25 python27 {
     depends_build-append    port:python26
     configure.args-delete   \
         -DVTK_WRAP_PYTHON:BOOL=OFF
@@ -141,9 +143,24 @@ variant python26 description {Build Python 2.6 wrappers} conflicts python25 {
         -DPYTHON_LIBRARY:FILEPATH=${prefix}/lib/libpython2.6.dylib \
         -DVTK_WRAP_PYTHON:BOOL=ON \
         -DVTK_INSTALL_NO_PYTHON:BOOL=ON
-
     post-destroot {
         system "cd ${worksrcpath}/Wrapping/Python && ${prefix}/bin/python2.6 setup.py install --prefix=${frameworks_dir}/Python.framework/Versions/2.6/ --root=${destroot}"
+    }
+}
+
+variant python27 description {Build Python 2.7 wrappers} conflicts python25 python26 {
+    depends_build-append    port:python27
+    configure.args-delete   \
+        -DVTK_WRAP_PYTHON:BOOL=OFF
+    configure.args-append   \
+        -DPYTHON_DEBUG_LIBRARY:FILEPATH=${prefix}/lib/libpython2.7.dylib \
+        -DPYTHON_EXECUTABLE:FILEPATH=${prefix}/bin/python2.7 \
+        -DPYTHON_INCLUDE_PATH:FILEPATH=${frameworks_dir}/Python.framework/Versions/2.7/include/python2.7 \
+        -DPYTHON_LIBRARY:FILEPATH=${prefix}/lib/libpython2.7.dylib \
+        -DVTK_WRAP_PYTHON:BOOL=ON \
+        -DVTK_INSTALL_NO_PYTHON:BOOL=ON
+    post-destroot {
+        system "cd ${worksrcpath}/Wrapping/Python && ${prefix}/bin/python2.7 setup.py install --prefix=${frameworks_dir}/Python.framework/Versions/2.7/ --root=${destroot}"
     }
 }
 
@@ -177,11 +194,12 @@ variant mysql description {Build the MySQL driver for vtkSQLDatabase} {
 variant data description {Install data and examples} {
     distfiles-append    [suffix vtkdata-${version}]
     checksums-append    [suffix vtkdata-${version}] \
-                        md5     97006362d7d67dc01289daf3e4ec4e38 \
-                        sha1    e0aa26dafd653da1db21fc97ce15aa0599d9c5ad \
-                        rmd160  8499816f6d714408c0f7f584fb4d781f4426e444
+                        md5     67263bd972f923d39a60f01104368779 \
+                        sha1    7350863d6351a961c4813ad6e73f74428307cd35 \
+                        rmd160  b77b5f6919beae406712b93cd333dd4fad5ff3d1
 
     post-destroot {
+        set vtkdest ${destroot}${prefix}/share/doc/${name}
         # Provide some examples
         file copy ${worksrcpath}/Examples ${vtkdest}
         xinstall -W ${worksrcpath}/bin \
