macsword: fix build
git-svn-id: https://svn.macports.org/repository/macports/trunk@72745 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/macsword/Portfile
+++ b/dports/aqua/macsword/Portfile
@@ -30,9 +30,11 @@ checksums		md5 2c6be1d86186a1a0fc770159f6a96066 \
 				sha1 258251d39fd18aa3a52f6c546e387873256c445e \
 				rmd160 4a24eb4e8ac3cf81fced81318f1a14dd45a3f13f
 
+supported_archs i386 ppc
+
 depends_lib		port:sword
 
-patchfiles		patch-project.pbxproj
+patchfiles		patch-project.pbxproj patch-SwordSearching.mm
 post-patch {
 	reinplace "s|__PREFIX|${prefix}|g" \
 		${worksrcpath}/MacSword.xcodeproj/project.pbxproj
