xorg-libXaw: Bump to 1.0.8
git-svn-id: https://svn.macports.org/repository/macports/trunk@72747 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libXaw/Portfile
+++ b/dports/x11/xorg-libXaw/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            xorg-libXaw
-version         1.0.7
+version         1.0.8
 categories      x11 devel
 maintainers     jeremyhu openmaintainer
 description     X.org libXaw
@@ -13,14 +13,15 @@ long_description Athena Widgets toolkit
 master_sites     http://xorg.freedesktop.org/archive/individual/lib/
 
 distname    libXaw-${version}
-checksums           md5     815e74de989ccda684e2baf8d12cf519 \
-                    sha1    0e5effe33c4c44d960132e3dd50370134a28f8b2 \
-                    rmd160  2f4f7fb82bf7b2769a38107846d2db008da2d1d8
+checksums           md5     030fced589e9128c3cf57564d4a2e1ab \
+                    sha1    b33192f2f9c2d2ee6570eda9199a60bd5f1515d1 \
+                    rmd160  c6252c6ab2f23c3b37698f03a92399e1bf63346b
 
 use_bzip2   yes
 use_parallel_build      yes
 
 depends_build   port:pkgconfig \
+                port:xorg-util-macros \
                 port:groff
 
 depends_lib     port:xorg-libsm \
@@ -29,11 +30,41 @@ depends_lib     port:xorg-libsm \
                 port:xpm \
                 port:xorg-libXt
 
-# 1.7.x borks #20145
-configure.cppflags-append  {} 
+patchfiles 0001-Move-I-CFLAGS-to-CPPFLAGS.patch
+patch.pre_args -p1
 
-# Delete this, so it searches its own headers first rather than installed ones
-configure.cppflags-delete -I${prefix}/include
+use_autoreconf yes
+autoreconf.args -fvi
+
+configure.args \
+        --disable-specs \
+        --without-xmlto \
+        --without-fop
+
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-fop \
+		--without-xmlto \
+		--disable-specs
+
+	configure.args-append \
+		--with-fop \
+		--with-xmlto \
+		--enable-specs
+
+	configure.env-append \
+		FOP="${prefix}/bin/fop" \
+		XMLTO="${prefix}/bin/xmlto"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
