--- a/dports/www/apache2/Portfile
+++ b/dports/www/apache2/Portfile
@@ -4,7 +4,7 @@
 PortSystem       1.0
 
 name             apache2
-version          2.2.16
+version          2.2.17
 categories       www
 maintainers      nomaintainer
 description      The extremely popular second version of the Apache http server 
@@ -22,8 +22,8 @@ distname         httpd-${version}
 use_bzip2        yes
 use_parallel_build  yes
 
-checksums           md5     c8ff2a07c884300bc7766a2e7f662d33 \
-                    sha1    ef92f5b3124fe5e9ba6121ea7f4bab8c014068f9
+checksums           sha1    5c9b44620dee449a86ba1bcba1715033c2c26b08 \
+                    rmd160  4a2f16f2891094d4176565fadf0e8fcadf7dbaff
 
 depends_lib      port:apr \
                  port:apr-util \
