--- a/dports/net/bind9/Portfile
+++ b/dports/net/bind9/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			bind9
-version			9.7.1-P2
+version			9.7.2-P2
 
 categories		net
 maintainers		geeklair.net:dluke
@@ -24,9 +24,9 @@ homepage		http://www.isc.org
 distname		bind-${version}
 master_sites		isc:${name}/${version}
 
-checksums	md5	bd6be63cc910d04da39103d441871596 \
-		sha1	b24ea0e8a67b841601b803f54070610036931e64 \
-		rmd160	ec978498c0e0fa7f709fa3398a573e67557f06a4
+checksums	md5	e74de6ec9c2cd27576794c873bd85f4a \
+		sha1	ad143fa002d16352648c651ac12471258971a0d1 \
+		rmd160	dcc8bf34d0e72c53257d9ac61f88fd0f3f039672
 		
 depends_lib		port:openssl port:libxml2
 
@@ -69,19 +69,17 @@ post-destroot	{
 	destroot.keepdirs ${destroot}${prefix}/var/run
 }
 
-post-destroot {
-	ui_msg "******************************************************"
-	ui_msg "* To setup named to run, you need to copy named.conf.dist"
-	ui_msg "* to named.conf:"
-	ui_msg "* sudo cp ${prefix}/etc/named.conf.dist ${prefix}/etc/named.conf"
-	ui_msg "* and edit as needed. If you use the default zone files for"
-	ui_msg "* 127.0.0, localhost, and the cache, you also need to copy"
-	ui_msg "* those files:"
-	ui_msg "* sudo cp ${prefix}/var/named/db.127.0.0.dist ${prefix}/var/named/db.127.0.0"
-	ui_msg "* sudo cp ${prefix}/var/named/db.cache.dist ${prefix}/var/named/db.cache"
-	ui_msg "* sudo cp ${prefix}/var/named/db.localhost.dist ${prefix}/var/named/db.localhost"
-	ui_msg "******************************************************"
-}
+notes "******************************************************
+* To setup named to run, you need to copy named.conf.dist
+* to named.conf:
+* sudo cp ${prefix}/etc/named.conf.dist ${prefix}/etc/named.conf
+* and edit as needed. If you use the default zone files for
+* 127.0.0, localhost, and the cache, you also need to copy
+* those files:
+* sudo cp ${prefix}/var/named/db.127.0.0.dist ${prefix}/var/named/db.127.0.0
+* sudo cp ${prefix}/var/named/db.cache.dist ${prefix}/var/named/db.cache
+* sudo cp ${prefix}/var/named/db.localhost.dist ${prefix}/var/named/db.localhost
+******************************************************"
 
 variant dlz_mysql5 description {Dynamically Loaded Zones (dlz) stored in MySQL 5.x} {
 	depends_lib-append \
