--- a/dports/devel/glib2-devel/Portfile
+++ b/dports/devel/glib2-devel/Portfile
@@ -7,8 +7,7 @@ PortGroup                   archcheck 1.0
 name                        glib2-devel
 conflicts                   glib2
 set my_name                 glib
-version                     2.27.0
-revision                    1
+version                     2.27.1
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  devel
 maintainers                 ryandesign openmaintainer
@@ -29,9 +28,8 @@ long_description            Glib is a library which includes support routines \
 master_sites                gnome:sources/${my_name}/${branch}/ \
                             ftp://ftp.gtk.org/pub/${my_name}/${branch}/
 
-checksums                   md5     51be266159093b6bde9ec690cd3087f9 \
-                            sha1    cbb6176c7c7ae2ba9497f5d30746eb0ab2ad6665 \
-                            rmd160  ca60738a232986b32dd014f7b69409654e52dc79
+checksums                   sha1    e250bd5c10a4d00edaf986df5237464fa6039c4c \
+                            rmd160  20ee4808b44207ac7a01218ba0b42cf229835044
 
 # ${prefix}/include/glib-2.0/glib/gi18n.h requires -I${prefix}/include to find libintl.h
 # See http://trac.macports.org/changeset/27148
