PCLauncher: don't need to archcheck Drizzle and PlasmaClient
git-svn-id: https://svn.macports.org/repository/macports/trunk@72765 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PCLauncher/Portfile
+++ b/dports/games/PCLauncher/Portfile
@@ -24,6 +24,8 @@ worksrcdir                  ${name}
 depends_run                 port:PlasmaClient \
                             port:Drizzle
 
+depends_skip_archcheck      PlasmaClient Drizzle
+
 post-extract {
     foreach app {PCDownloader PCExtractor} {
         copy ${filespath}/${app}.in ${worksrcpath}/${app}
