devel/valgrind: Update to version 3.6.0, now compatible with Mac OS X 10.6
git-svn-id: https://svn.macports.org/repository/macports/trunk@72768 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/valgrind/Portfile
+++ b/dports/devel/valgrind/Portfile
@@ -3,13 +3,12 @@
 PortSystem 1.0
 
 name            valgrind
-version         3.5.0
-revision        1
+version         3.6.0
 categories      devel
 platforms       darwin
 maintainers     raimue
 
-description     A powerful open-source memory debugger.
+description     A powerful open-source memory debugger
 long_description \
     Valgrind is a powerful open-source memory debugger. When valgrind is \
     attached to a program, it intercepts calls to malloc/new/free/delete and \
@@ -17,18 +16,14 @@ long_description \
 homepage        http://valgrind.org
 
 master_sites    http://valgrind.org/downloads/
-checksums       md5     f03522a4687cf76c676c9494fcc0a517 \
-                sha1    76678c2617278cc9fbda1232e4e56fb2a96b0eb8 \
-                rmd160  dd0ca80d73daac774b9352fe7a07ab72aae767c9
+checksums       md5     b289c5f4ab8e39741602445f1dd09b34 \
+                sha1    6f7ae88d36dfb45c337175a873aada7bed01c8c3 \
+                rmd160  d7adc13bdafb1e5057d2e2a7a41076c1acabc368
 use_bzip2 yes
 
-pre-fetch {
+pre-configure {
     if {"darwin" == ${os.platform} && ${os.major} < 9} {
-        ui_error "${name} ${version} is only compatible with Mac OS X 10.5."
-        return -code error "incompatible Mac OS X version"
-    }
-    if {"darwin" == ${os.platform} && ${os.major} > 9} {
-        ui_error "${name} ${version} is not compatible with Mac OS X 10.6 or later. Until ${name} 3.6.0 is released, please install valgrind-devel instead."
+        ui_error "${name} ${version} is only compatible with Mac OS X 10.5 or later."
         return -code error "incompatible Mac OS X version"
     }
 }
@@ -40,13 +35,40 @@ depends_build   bin:perl:perl5
 configure.args  --mandir=${prefix}/share/man \
                 --without-mpicc
 
-variant mpich2 description {Use mpich2 for MPI support} {
+supported_archs i386 x86_64
+
+if {$build_arch == "i386"} {
+    configure.args-append --enable-only32bit
+} elseif {$build_arch == "x86_64"} {
+    configure.args-append --enable-only64bit
+}
+
+# valgrind sets up -arch by itself, adding our own interferes with the build
+configure.cc_archflags {}
+configure.ld_archflags {}
+
+variant universal {
+    configure.args-delete --enable-only32bit --enable-only64bit
+    configure.universal_cflags {}
+    configure.universal_cxxflags {}
+    configure.universal_ldflags {}
+
+    pre-configure {
+        if {$build_arch == "i386"} {
+            # See #25684 and https://bugs.kde.org/show_bug.cgi?id=243362
+            ui_error "valgrind does not build +universal on a 32-bit only CPU!"
+            return -code error "unsupported CPU"
+        }
+    }
+}
+
+variant mpich2 description {Use mpich2 for MPI support} conflicts universal {
     depends_lib-append port:mpich2
     configure.args-delete --without-mpicc
     configure.args-append --with-mpicc=${prefix}/bin/mpicc
 }
 
-variant openmpi description {Use openmpi for MPI support} {
+variant openmpi description {Use openmpi for MPI support} conflicts universal {
     depends_lib-append port:openmpi
     configure.args-delete --without-mpicc
     configure.args-append --with-mpicc=${prefix}/bin/openmpicc
